MDEV-30946 Index usage for DATE(datetime_column) = const does not work for DELETE and UPDATE

Add date conditions transformation to the execution paths
of DELETE and UPDATE commands